# efika-core

./: CMakeLists.txt  README.md  core-config.cmake.in
.github/workflows/: cmake.yml
bench/: CMakeLists.txt  spgemm.cc
include/efika/: core.h
src/: CMakeLists.txt  cleanup.c  comp.c  conv.c  copy.c  cord.c  free.c  globals.c  iidx.c  init.c  norm.c  perm.c  rord.c  rsb.c  sort.c  test.c  zord.c
src/blas/: csrcsc.c  spgemm.c  vdoti.c  vgthrz.c  vnrm2.c  vscal.c  vsctr.c  vsctrz.c
src/gc/: cleanup.c  free.c  realloc.c
src/include/efika/core/: blas.h  gc.h  pp.h  rename.h  rsb.h
src/include/efika/core/pp/: all.h  any.h  bool.h  cat.h  defer.h  eval.h  fold.h  hasargs.h  ifelse.h  map.h  reverse.h
src/rsb/: spgemm.c
test/: CMakeLists.txt  blas.cc  matrix.cc  spgemm.cc  test_blas.cc  test_matrix.cc
